--- a/googlemap/maptest/maptest1.html
+++ b/googlemap/maptest/maptest1.html
@@ -20,9 +20,8 @@ let map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSBnIyC1yT06SvPKnLFX9SWvNOi8qjX6w&callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=inputyourkey&callback=myMap"></script>
 
-<!-- AIzaSyDSBnIyC1yT06SvPKnLFX9SWvNOi8qjX6w 일단 발급받은 api키. -->
 
 </body>
 </html>
