--- a/googlemap/maptest/maptest3.html
+++ b/googlemap/maptest/maptest3.html
@@ -46,9 +46,8 @@ flightPath.setMap(map);
 
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSBnIyC1yT06SvPKnLFX9SWvNOi8qjX6w&callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=inputyourkey&callback=myMap"></script>
 
-<!-- AIzaSyDSBnIyC1yT06SvPKnLFX9SWvNOi8qjX6w 일단 발급받은 api키. -->
 
 </body>
 </html>
